Manifests/monitoring/kubernetes-grafana/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: grafana
#   namespace: monitoring
#   annotations:
#     prometheus.io/scrape: "true"
#     prometheus.io/port: "3000"
# spec:
#   selector:
#     app: grafana
#   type: NodePort
#   ports:
#     - port: 3000
#       targetPort: 3000
#       nodePort: 32000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
