Manifests/monitoring/kubernetes-grafana/grafana-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
  annotations:
    ingressClassName: nginx
spec:
  rules:
    # Use the host you used in your kubernetes Ingress Configurations
    - host: grafana.your_domain
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.your_domain
      secretName: grafana-secret
